--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node test-server.js",
+    "start": "node index.js",
     "start:test": "node test-server.js",
     "start:railway": "node index-railway.js",
     "start:simple": "node index-simple.js",
